Second Commit for View 1

--- a/index.html
+++ b/index.html
@@ -9,31 +9,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Optional but Good Form meta tags to use-->
-    <meta name="keywords" content="Search terms people use to find this page: add in search terms such as ISIT320">
-    <meta name="description" content="This is the paragraph that appears along with your link in search engine results">
+    <meta name="keywords" content="ISIT320, Joseph Jennings, portfolio, Joe Jennings, programming">
+    <meta name="description" content="Joseph Jennings' programming portfolio. From ISIT 320 to infinity.">
     <meta name="author" content="Joseph Jennings">
 
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <!--External CSS-->
+    <link rel="stylesheet" type= "text/css" href="css/style.css"/>
 </head>
 
 <body>
-    <div class="container-fluid" style="border:solid;">
+    <div class="container-fluid">
 
-        <h1>Joe's ISIT 320 Portfolio</h1>
+        <h1>Joseph Jennings ISIT 320 Portfolio</h1>
         <div class="row">
 
-            <div class="col-sm-4" style="border:solid;">
-                <img src="img/randompic.png" alt="reasonabledescriptionofimage" style="height:150px;float:left;" />
+            <div class="col-sm-4" >
+                <img src="img/Me.png" alt="Joseph Jennings" style="height:150px;float:left;" />
                 <!--use a float tag with the height/image position-->
                 <p style="clear:both;">Joseph Jennings</p>
+                <a style="clear:both;" href="mailto:joseph.jennings@bellevuecollege.edu" target="_top">joseph.jennings@bellevuecollege.edu</a>
                 <p><a href="html/webresources.html">Web Resources</a></p>
             </div>
-            <div class="col-sm-8" style="border:solid;">
-                <p>My biography</p>
+            <div class="col-sm-8">
+                <p>I am currently completing my BA in Information Systems with a concentration in Application Development. I have knowledge of
+                    C#, Java, MySQL, and ASP.net among others. Besides my technical skills, I have excellent customer servie and communication skills,
+                    honed by years of serving as liason between faculty, staff and customers in a collegiate setting.
+                </p>
             </div>
 
 
